Actualización peticiones gestion de usuarios